# verify-signature

./: README.md  default.nix  verify-signature.cabal
app/: Main.hs
data/: authorized_signers  message.txt.sig  testkey_ed25519  testkey_ed25519.pub
