cabal-version:      3.0
name:               verify-signature
version:            0.1.0.0
-- synopsis:
-- description:
license:            NONE
-- author:
-- maintainer:
-- copyright:
build-type:         Simple
-- extra-doc-files:
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable verify-signature
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0, crypton, bytestring, extra, base64-bytestring
    hs-source-dirs:   app
    default-language: Haskell2010
